--- a/.github/workflows/on-pr-opened.yaml
+++ b/.github/workflows/on-pr-opened.yaml
@@ -18,8 +18,6 @@ jobs:
           issue_number: ${{ github.event.pull_request.number }}
         with:
           script: |
-            console.log(JSON.stringify(context, null, 2));
-
             const query = `query($owner:String!, $name: $String!, $prNumber:String!){
               repository(owner: "songmatrix", name: "sync-service") {
                 pullRequest(number: 4) {
@@ -38,7 +36,7 @@ jobs:
             const variables = {
               owner: context.repo.owner,
               repo: context.repo.repo,
-              prNumber: context.event.pull_request.number,
+              prNumber: context.payload.pull_request.number,
             };
 
             const result = await github.graphql(query, variables);
