--- a/.github/workflows/on-pr-opened.yaml
+++ b/.github/workflows/on-pr-opened.yaml
@@ -18,7 +18,7 @@ jobs:
           issue_number: ${{ github.event.pull_request.number }}
         with:
           script: |
-            const query = `query($owner:String!, $name: $String!, $prNumber:String!){
+            const query = `query($owner:String!, $name: $String!, $prNumber:Int!){
               repository(owner: "songmatrix", name: "sync-service") {
                 pullRequest(number: 4) {
                   closingIssuesReferences(first: 1) {
